--- a/style.css
+++ b/style.css
@@ -258,6 +258,9 @@ h4 {
 
       /* ----menu query for less than 600 screen size---*/
       @media only screen and (max-width: 600px) {
+       .body{
+         width: 100%;
+        }
         .row {
           text-align: center;
         }
@@ -271,6 +274,7 @@ h4 {
         }
         .container {
           height: 100vh;
+          width: 100%;
           background: rgb(210, 209, 209);
         }
         .container2 img {
