--- a/style.css
+++ b/style.css
@@ -294,6 +294,11 @@ h4 {
           font-size: 26px;
           line-height: 32px;
         }
+        .small-container {
+          height: 100vh;
+          width: 100%;
+          background: rgb(210, 209, 209);
+        }
         
 
       }
