--- a/style.css
+++ b/style.css
@@ -267,7 +267,7 @@ h4 {
         }
         .main-title {
           font-size: 30px;
-          top: 30%;
+          top: 20%;
           left: 50%;
         }
         .container {
@@ -290,7 +290,10 @@ h4 {
         .single-product h1 {
           font-size: 26px;
           line-height: 32px;
-
+        }
+        
+        .small-container {
+          width: 100%;
         }
 }
 
