--- a/style.css
+++ b/style.css
@@ -257,8 +257,8 @@ h4 {
    }
 
       
-      /* ----menu query for less than 600 screen size---*/
-      @media only screen and (max-width: 600px) {
+      /* ----menu query for less than  768px screen size---*/
+      @media only screen and (max-width: 768px) {
         .row {
           text-align: center;
             display:flex;
