--- a/style.css
+++ b/style.css
@@ -265,11 +265,12 @@ h4 {
             align-items: center;
             flex-wrap: wrap;
             justify-content: space-around;
-            padding-left: 50px;
-            padding-right: 50px;
+            padding-left: 60px;
+            padding-right: 60px;
         }
-        .col-2, col-3, col-4, .container{
-          flex-basis: 100%;
+        .col-2, col-3, 
+        , .container{
+          flex-basis: 60%;
         }
         .main-title {
           font-size: 30px;
@@ -301,6 +302,11 @@ h4 {
         .small-container {
           width: 100%;
         }
+        .col-4 img {
+          width: 150px;
+          height: 100px;
+          object-fit: contain;
+}
 }
 
       /* ------single prod details------*/
