--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ h4 {
         .main-title {
           font-size: 40px;
           top: 10%;
-          left: 50%;
+          text-align: center;
         }
         .container {
           height: 100vh;
@@ -308,6 +308,36 @@ h4 {
           height: 200px;
           object-fit: contain;
         }
+        
+         /* footer */
+     .footer{
+      background:rgb(0, 0, 0);
+      color:rgb(255, 255, 255);
+      font-size: 15px;
+      padding: 60px 0 20px;
+    }
+
+
+    .footer-col-1 {
+      min-width: 100px;
+      margin-bottom: 10px;
+      flex-basis: 100%;
+      text-align: left;
+    }
+  
+
+    ul {
+      list-style-type:  none;
+
+    }
+
+    .footer hr {
+      border: none;
+      background-color: black;
+      height: 1px;
+      margin: 20px 0;
+    }
+
 }
 
       /* ------single prod details------*/
