--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ h4 {
           flex-basis: 60%;
         }
         .main-title {
-          font-size: 40px;
+          font-size: 34px;
           top: 10%;
           text-align: center;
         }
@@ -285,8 +285,8 @@ h4 {
         .container2 img {
           width: 100%;
           position: absolute;
-          height: 80vh;
-          object-fit:scale-down;
+          width: 250px;
+          height: 200px;
           z-index: 1;
         }
         .single-product .row{
@@ -319,24 +319,13 @@ h4 {
 
 
     .footer-col-1 {
-      min-width: 100px;
+      min-width: 20px;
       margin-bottom: 10px;
-      flex-basis: 100%;
+      flex-basis: 60%;
       text-align: left;
     }
-  
+ 
 
-    ul {
-      list-style-type:  none;
-
-    }
-
-    .footer hr {
-      border: none;
-      background-color: black;
-      height: 1px;
-      margin: 20px 0;
-    }
 
 }
 
