--- a/style.css
+++ b/style.css
@@ -285,8 +285,8 @@ h4 {
         .container2 img {
           width: 100%;
           position: absolute;
-          width: 190px;
-          height: 130px;
+          width: 100px;
+          height: 90px;
           z-index: 1;
         }
         .single-product .row{
@@ -319,10 +319,7 @@ h4 {
 
 
     .footer-col-1 {
-      min-width: 200px;
-      margin-bottom: 10px;
-      flex-basis: 100%;
-      text-align: left;
+      text-align: center;
     }
  
 
