--- a/style.css
+++ b/style.css
@@ -284,9 +284,9 @@ h4 {
         }
         .container2 img {
           width: 100%;
-          position: absolute;
-          width: 650px;
-          height: 590px;
+          position: center;
+          width: 600px;
+          height: 580px;
           z-index: 1;
         }
         .single-product .row{
