--- a/style.css
+++ b/style.css
@@ -280,6 +280,7 @@ h4 {
         }
         .container {
           height: 100vh;
+          width: 100%;
           background: rgb(210, 209, 209);
         }
         .container2 img {
