--- a/style.css
+++ b/style.css
@@ -279,12 +279,12 @@ h4 {
           text-align: center;
         }
         .container {
-          height: 100vh;
-          width: 100%;
+          margin: auto; 
+          width: 640px;
+          padding: 50px;
           background: rgb(210, 209, 209);
         }
         
-
         
         .container2 img {
           display: flex;
