--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ p{
   width: 100%;
   margin: auto;
   background: rgb(210, 209, 209);
-  
 }
 .col-2 {
   flex-basis: 50%;
@@ -71,13 +70,12 @@ p{
 }
 .container {
   height: 70vh;
-  width: 100%;
   background: rgb(210, 209, 209);
 }
 
 .container2 img {
   width: 100%;
-  position: center;
+  position: absolute;
   height: 95vh;
   object-fit:scale-down;
   z-index: 1;
@@ -161,14 +159,6 @@ p{
   border-radius: 30px;
 
 }
-.title {
-  text-align: left;
-  margin: 0 auto 80px;
-  position:relative;
-  line-height: 70px;
-  font-size: xx-large;
-  color:rgb(0, 0, 0);
-}
 .contact-title{
   position: absolute;
   top: 35%;
@@ -199,9 +189,9 @@ h4 {
 
 
     .footer-col-1 {
-      min-width: 200px;
+      min-width: 250px;
       margin-bottom: 10px;
-      flex-basis: 100%;
+      flex-basis: 90%;
       text-align: left;
     }
   
@@ -257,40 +247,34 @@ h4 {
 
    }
 
-      
-      /* ----menu query for less than  768px screen size---*/
+      /* ----menu query for less than  768 screen size---*/
       @media only screen and (max-width: 768px) {
         .row {
           text-align: center;
-            display:flex;
-            align-items: center;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            padding-left: 60px;
-            padding-right: 60px;
+          display:flex;
+          align-items: center;
+          flex-wrap: wrap;
+          justify-content: space-around;
+          padding-left: 60px;
+          padding-right: 60px;
         }
-        .col-2, col-3, 
-        , .container{
+        .col-2, col-3, col-4, .container{
           flex-basis: 60%;
         }
         .main-title {
-          font-size: 30px;
-          top: 10%;
-          text-align: center;
+            font-size: 30px;
+            top: 10%;
+            text-align: center;
         }
         .container {
-          margin: auto; 
-          width: 640px;
-          padding: 50px;
+          height: 100vh;
           background: rgb(210, 209, 209);
         }
-        
-        
         .container2 img {
-          display: flex;
-          justify-content: center;
-          width: 600px;
-          height: 580px;
+          width: 100%;
+          position: absolute;
+          height: 80vh;
+          object-fit:scale-down;
           z-index: 1;
         }
         .single-product .row{
@@ -303,31 +287,26 @@ h4 {
           font-size: 26px;
           line-height: 32px;
         }
-        
         .small-container {
           width: 100%;
         }
+
         .col-4 img {
           width: 250px;
           height: 200px;
           object-fit: contain;
         }
-       
          .footer{
           background:rgb(0, 0, 0);
           color:rgb(255, 255, 255);
           font-size: 15px;
           padding: 50px 0 10px;
         }
-
-
         .footer-col-1 {
           text-align: center;
         }
- 
 
-
-}
+      }
 
       /* ------single prod details------*/
       .product-detail {
