--- a/style.css
+++ b/style.css
@@ -116,13 +116,28 @@ p{
   padding-bottom: 300px;
   background: rgb(210, 209, 209);;
 }
-.small-container2 {
+.small-container2{
   width: 100%;
   margin: auto;
-  padding-left: 25px;
-  padding-right: 25px;
   padding-bottom: 300px;
-  background: rgb(210, 209, 209);;
+  background: rgb(210, 209, 209);
+}
+.small-container3 {
+  width: 100%;
+  margin: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 100px;
+  background: rgb(210, 209, 209);
+}
+.row-2 {
+  display:flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding-left: 10px;
+  padding-right: 10px;
+
 }
 .row {
   display:flex;
@@ -275,9 +290,10 @@ h4 {
         .single-product .col-2{
           padding: 20px 0;
         }
-        .col-2 {
+        .col-2{
           flex-basis: auto;
         }
+      
         .single-product h1 {
           font-size: 40px;
           line-height: 90px;
@@ -285,6 +301,7 @@ h4 {
         .small-container {
           width: 100%;
         }
+      
     
         .col-4 img {
           width: 250px;
