--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: rgb(253, 253, 253);
+  color: #FFFAF0; 
   font-family: "Poppins", sans-serif;
 }
 
@@ -42,13 +42,13 @@ a{
 }
 
 p{
-  color:rgb(253, 253, 253);
+  color: #FFFAF0; 
 }
 
 .container3 {
   width: 100%;
   margin: auto;
-  background: rgb(210, 209, 209);
+  background: #FFFAF0; 
 }
 .col-2 {
   flex-basis: 50%;
@@ -70,7 +70,7 @@ p{
 }
 .container {
   height: 70vh;
-  background: rgb(210, 209, 209);
+  background: #FFFAF0; 
 }
 
 .container2 img {
@@ -87,7 +87,7 @@ p{
   left: 50%;
   font-size: clamp(2rem, 5vw, 6rem);
   transform: translate(-50%, -100%);
-  color:rgb(255, 246, 246);
+  color: #FFFAF0;
 }
 .content1 {
   width: 100%;
@@ -114,7 +114,7 @@ p{
   padding-right: 25px;
   padding-top: 400px;
   padding-bottom: 300px;
-  background: rgb(210, 209, 209);;
+  background: #FFFAF0;
 }
 .small-container2{
   width: 100%;
