--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: #FFFAF0; 
+  color: #000000; 
   font-family: "Poppins", sans-serif;
 }
 
@@ -37,12 +37,12 @@ nav ul li{
 
 a{
   text-decoration: none;
-  color: #FFFAF0; 
+  color: #000000;
 
 }
 
 p{
-  color: #FFFAF0; 
+  color: #000000;
 }
 
 .container3 {
@@ -87,7 +87,7 @@ p{
   left: 50%;
   font-size: clamp(2rem, 5vw, 6rem);
   transform: translate(-50%, -100%);
-  color: #FFFAF0;
+  color: #000000;
 }
 .content1 {
   width: 100%;
@@ -160,7 +160,7 @@ p{
 }
 .btn{
   display: inline-block;
-  background-color: #FFFAF0;
+  background-color: #000000;
   color: black;
   padding: 8px 30px;
   margin: 30px 0;
@@ -172,7 +172,7 @@ p{
   left: 20%;
   font-size: 3rem;
   transform: translate(-50%, -30%);
-  color:#FFFAF0;
+  color:#000000; 
 }
 h4 {
   color:rgb(0, 0, 0);
