--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ p{
 .btn{
   display: inline-block;
   background-color: #000000;
-  color: black;
+  color: #FFFAF0;
   padding: 8px 30px;
   margin: 30px 0;
   border-radius: 30px;
