--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@ h4 {
 
      /* footer */
      .footer{
-      background:rgb(0, 0, 0);
+      background:#000000; 
       color: #FFFAF0;
       font-size: 15px;
       padding: 60px 0 20px;
@@ -209,9 +209,9 @@ h4 {
 
     }
 
-    .footer hr {
+    .hr {
       border: none;
-      background-color: black;
+      background-color: #000000; 
       height: 1px;
       margin: 20px 0;
     }
@@ -303,14 +303,13 @@ h4 {
           width: 100%;
         }
       
-    
         .col-4 img {
           width: 250px;
           height: 200px;
           object-fit: contain;
         }
          .footer{
-          background:rgb(0, 0, 0);
+          background: #000000; 
           color: #FFFAF0;
           font-size: 15px;
           padding: 50px 0 10px;
@@ -346,7 +345,7 @@ h4 {
         font-size: 20px;
         margin-right: 10px;
         border: 1px solid #FFFAF0;
-        color: black;
+        color: #000000; 
       }
       input:focus{
         outline: none;
@@ -361,7 +360,7 @@ h4 {
       }
 
     h2 {
-      color: black;
+      color: #000000; 
       padding-bottom: 20px;
       padding-left: 160px;
     }
