--- a/style.css
+++ b/style.css
@@ -191,6 +191,7 @@ h4 {
      .footer{
       background:#000000; 
       font-size: 15px;
+      color: #FFFAF0;
       padding: 60px 0 20px;
     }
 
@@ -206,18 +207,20 @@ h4 {
 
     ul {
       list-style-type:  none;
+      color: #FFFAF0;
 
     }
 
     .hr {
       border: none;
-      background-color: #000000; 
+      background-color: #000000;
       height: 1px;
       margin: 20px 0;
     }
 
     .copyright {
       text-align: center;
+      color: #FFFAF0;
     }
 
     .menu-icon {
